[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "hishel>=0.0.33",
  "httpx[socks]>=0.27.2",
  "lazy-loader>=0.4",
  "pydantic>=2.9.2",
  "rich>=13.9.2",
  "tenacity>=9.0.0",
  "typer>=0.12.5",
  "yarl>=1.16.0",
]
description = "Add your description here"
name = "thu-learn-downloader"
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.1"

[project.scripts]
thu-learn-downloader = "thu_learn_downloader:app"
tld = "thu_learn_downloader:app"

[tool.uv]
dev-dependencies = ["icecream>=2.1.3", "marimo>=0.9.11"]
