[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["liblaf <i@liblaf.me>"]
description = "Download everything from Web Learning of Tsinghua University"
license = "MIT"
name = "thu-learn-downloader"
readme = "README.md"
repository = "https://github.com/liblaf/thu-learn-downloader"
version = "0.3.1"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
pydantic = "^2.4.2"
python = "^3.10"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
rich = "^13.7.1"
tenacity = "^9.0.0"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
nuitka = ">=1.8.5,<3.0.0"
pyinstaller = { python = ">=3.10,<3.13", version = "^6.1.0" }
ruff = ">=0.12.7,<0.13.0"
typer-cli = { git = "https://github.com/Patarimi/typer-cli.git" }

[tool.poetry.scripts]
thu-learn-downloader = "thu_learn_downloader.main:app"
tld = "thu_learn_downloader.main:app"

[[tool.poetry.source]]
name = "mirrors"
priority = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
