#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "thu-learn-downloader"
description = "Download everything from Web Learning of Tsinghua University"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" },
]
keywords = []
classifiers = [
  # common classifiers
  # ref: <https://pypi.org/classifiers/>
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "beautifulsoup4>=4.0.0,<5",
  "lazy-loader>=0.4.0,<0.5",
  "loguru>=0.7.0,<0.8",
  "pydantic>=2.0.0,<3",
  "python-dateutil>=2.0.0,<3",
  "requests>=2.0.0,<3",
  "rich>=14.0.0,<15",
  "selenium>=4.0.0,<5",
  "tenacity>=9.0.0,<10",
  "typer>=0.16.0,<0.17",
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/thu-learn-downloader/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/thu-learn-downloader/"
"Funding" = "https://github.com/liblaf/thu-learn-downloader?sponsor=1"
"Homepage" = "https://github.com/liblaf/thu-learn-downloader"
"Issue Tracker" = "https://github.com/liblaf/thu-learn-downloader/issues"
"Release Notes" = "https://github.com/liblaf/thu-learn-downloader/releases"
"Source Code" = "https://github.com/liblaf/thu-learn-downloader"

[project.scripts]
thu-learn-downloader = "thu_learn_downloader.main:app"
tld = "thu_learn_downloader.main:app"

[dependency-groups]
build = ["check-wheel-contents", "hatch", "twine"]
dev = ["icecream"]
docs = [
  "docstring-inheritance",
  "griffe-fieldz",
  "griffe-generics",
  "griffe-inherited-docstrings",
  "griffe-modernized-annotations",
  "griffe-pydantic",
  "griffe-warnings-deprecated",
  "mdx-truly-sane-lists",
  "mkdocs",
  "mkdocs-api-autonav",
  "mkdocs-autorefs",
  "mkdocs-git-committers-plugin-2",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-include-markdown-plugin",
  "mkdocs-material[imaging]",
  "mkdocs-section-index",
  "mkdocstrings",
  "mkdocstrings-python",
  "pymdown-extensions",
  "ruff",
]
test = ["hypothesis", "pytest", "pytest-codspeed", "pytest-cov", "pytest-xdist"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.hatch.build.hooks.vcs]
version-file = "src/thu_learn_downloader/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src/"]

[tool.hatch.build.targets.wheel]
packages = ["src/thu_learn_downloader/"]

[tool.hatch.version]
source = "vcs"

[tool.pytest]
[tool.pytest.ini_options]
addopts = ["--showlocals", "--strict-config", "--strict-markers"]
testpaths = ["benches/", "tests/"]

[tool.uv]
default-groups = "all"
